tests/init/neg/inner-first.check
-- Error: tests/init/neg/inner-first.scala:3:12 ------------------------------------------------------------------------
3 |    println(this)           // error
  |            ^^^^
  |Could not verify that the method argument is transitively initialized (Hot). It was found to be the original object of type (class B) where initialization checking started. Only transitively initialized arguments may be passed to methods (except constructors).
  |Non initialized field(s): value n. Calling trace:
  |├── class B:	[ inner-first.scala:2 ]
  |│   ^
  |└── println(this)           // error	[ inner-first.scala:3 ]
  |            ^^^^
